# iarc_detection_modules

./: README.md
Surf_stuff/: CMakeCache.txt  CMakeLists.txt  Makefile  Surf1  Surf1.cpp  cmake_install.cmake
dock_detector/: CMakeLists.txt  package.xml
dock_detector/cfg/: params.yaml
dock_detector/include/dock_detector/: dock_detector.hpp  libdock_detection.hpp
dock_detector/launch/: default.launch
dock_detector/src/: dock_detector.cpp  dock_detector_node.cpp  libdock_detection.cpp
feature_detection/: BenchMark.md  CMakeLists.txt  package.xml
feature_detection/config/: surf.yaml  text_detect.yaml
feature_detection/devel/: _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
feature_detection/devel/.private/catkin_tools_prebuild/: .catkin  .rosinstall  local_setup.sh
feature_detection/devel/.private/catkin_tools_prebuild/lib/pkgconfig/: catkin_tools_prebuild.pc
feature_detection/devel/.private/catkin_tools_prebuild/share/catkin_tools_prebuild/cmake/: catkin_tools_prebuildConfig.cmake
feature_detection/devel/lib/pkgconfig/: catkin_tools_prebuild.pc
feature_detection/devel/share/catkin_tools_prebuild/cmake/: catkin_tools_prebuildConfig-version.cmake  catkin_tools_prebuildConfig.cmake
feature_detection/include/feature_detection/: text_detect.hpp
feature_detection/launch/: text_detect.launch
feature_detection/src/: text_detect.cpp  text_detect_node.cpp
iarc_detection_modules/: CMakeLists.txt  package.xml
kfast_iarc/: CMakeLists.txt  package.xml
kfast_iarc/include/kfast_iarc/: KFAST.h  KFAST.hpp
kfast_iarc/launch/: kfast.launch
kfast_iarc/src/: kfast_iarc.cpp  kfast_iarc_node.cpp
led_detector/: CMakeLists.txt  package.xml
led_detector/config/: param.yaml
led_detector/include/led_detector/: led_detector.hpp  libled_detection.hpp
led_detector/launch/: default.launch
led_detector/src/: led_detector.cpp  led_detector_node.cpp  libled_detection.cpp
plate_detector/: CMakeLists.txt  package.xml
plate_detector/config/: param.yaml
plate_detector/include/plate_detector/: libplate_detection.hpp  libpose_estimation.hpp  plate_detector.hpp  pose_estimator.hpp
plate_detector/launch/: default.launch
plate_detector/src/: libplate_detection.cpp  libpose_estimation.cpp  plate_detector.cpp  plate_detector_node.cpp  pose_estimation_ros.cpp  pose_estimation_ros_node.cpp  pose_estimator.cpp  pose_estimator_node.cpp
plate_detector_ros/: CMakeLists.txt  package.xml
plate_detector_ros/include/plate_detector_ros/: plate_detector_ros.hpp
plate_detector_ros/launch/: test.launch  test.world
plate_detector_ros/src/: plate_detector_ros.cpp  plate_detector_ros_node.cpp
plate_pose_estimation/: CMakeLists.txt  package.xml
plate_pose_estimation/include/plate_pose_estimation/: pose_estimation.hpp
plate_pose_estimation/src/: pose_estimation.cpp
plate_pose_estimation_ros/: CMakeLists.txt  package.xml
plate_pose_estimation_ros/include/plate_pose_estimation_ros/: pose_estimation_ros.hpp
plate_pose_estimation_ros/src/: pose_estimation_ros.cpp  pose_estimation_ros_node.cpp
pose_estimator/config/: param.yaml
pose_estimator/include/pose_estimator/: libpose_estimation.hpp  pose_estimator.hpp
pose_estimator/launch/: default.launch  pose_estimator.launch
pose_estimator/src/: libpose_estimation.cpp  pose_estimator.cpp  pose_estimator_node.cpp
text_detector/: CMakeLists.txt  package.xml
text_detector/config/: param.yaml
text_detector/include/text_detector/: libtext_detection.hpp  text_detector.hpp
text_detector/launch/: default.launch
text_detector/src/: libtext_detection.cpp  text_detector.cpp  text_detector_node.cpp
text_pose_estimator/: CMakeLists.txt  package.xml
text_pose_estimator/include/text_pose_estimator/: text_libpose_estimation.hpp  text_pose_estimator.hpp
text_pose_estimator/launch/: default.launch
text_pose_estimator/src/: text_libpose_estimation.cpp  text_pose_estimator.cpp  text_pose_estimator_node.cpp
util_msgs/: CMakeLists.txt  package.xml
