<package>
  <name>iarc_detection_modules</name>
  <version>1.0.0</version>
  <description>Detection Modules for IARC Mission 9</description>
  <maintainer email="aerialroboticsiitk@gmail.com">Aerial Robotics IITK</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- Add packages as run dependencies below -->
  <run_depend>plate_detector</run_depend>
  <run_depend>plate_detector_ros</run_depend>
  <run_depend>plate_pose_estimation</run_depend>
  <run_depend>plate_pose_estimation_ros</run_depend>
  <run_depend>util_msgs</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
