<package>
  <name>iarc_detection_modules</name>
  <version>1.0.0</version>
  <description>Detection Modules for IARC Mission 9</description>
  <maintainer email="aerialroboticsiitk@gmail.com">Aerial Robotics IITK</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- Add packages as run dependencies below -->
  <run_depend>plate_detector</run_depend>
  <run_depend>led_detector</run_depend>
  <run_depend>feature_detection</run_depend>
  <run_depend>pose_estimator</run_depend>
  <run_depend>detector_msgs</run_depend>
  <run_depend>text_detector</run_depend>
  <run_depend>text_pose_estimator</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
