<?xml version="1.0"?>
<package format="2">
  <name>kfast_iarc</name>
  <version>0.0.0</version>
  <description>The kfast_iarc package</description>

  <maintainer email="ramdas@todo.todo">ramdas</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>roscpp</depend>
  <depend>cv_bridge</depend>
  <depend>std_msgs</depend>
</package>
