<?xml version="1.0"?>
<package format="2">
  <name>plate_detector</name>
  <version>0.0.0</version>
  <description>The plate_detector package</description>

  <maintainer email="atharva@todo.todo">atharva</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <build_depend>roscpp</build_depend>

  <depend>cv_bridge</depend>
  <depend>util_msgs</depend>
  <depend>eigen_conversions</depend>
  <depend>tf</depend>
  <depend>tf_conversions</depend>
  <depend>mavros_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>dynamic_reconfigure</depend>

</package>
