<?xml version="1.0"?>
<package format="2">
  <name>text_detector</name>
  <version>0.0.0</version>
  <description>The text_detector package</description>

  <maintainer email="atharva@todo.todo">atharva</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <build_depend>roscpp</build_depend>

  <depend>cv_bridge</depend>
  <depend>detector_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>image_transport</depend>

</package>
